--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,18 +1,3 @@
-h3 {
-  margin: 40px 0 0;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-li {
-  display: inline-block;
-  margin: 0 10px;
-}
-a {
-  color: #42b983;
-}
-
 /* Background ................................. */
 section::before {
   content: "";
@@ -38,3 +23,45 @@ section::after {
   z-index: -1;
 }
 /* Background ................................. */
+
+.container {
+  font-family: "Fira Code", monospace;
+  word-wrap: initial;
+  text-align: start;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 1em 1em;
+  width: 100%;
+}
+
+.container .card {
+  position: relative;
+  width: 100%;
+  background: rgba(8, 8, 8, 0.05);
+  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  padding: 6em;
+  opacity: 1;
+  word-wrap: initial;
+}
+
+.font {
+  color: #355c7d;
+  font-size: 1.2rem;
+}
+
+.blod {
+  font-weight: bold;
+}
+
+.description-text {
+  display: inline-block;
+  margin: 1em auto auto auto;
+  text-align: left;
+}
